apps/base/media/jellyseer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseer
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseer
  template:
    metadata:
      labels:
        app: jellyseer
        
    spec:
      restartPolicy: Always

      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000

      containers:
      - name: jellyseer
        image: ghcr.io/seerr-team/seerr:v3.5.0

        ports:
        - containerPort: 5055
          protocol: TCP

        volumeMounts:
        - name: config
          mountPath: /app/config

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyseer-config-pvc
