apps/base/media/jellyseer/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jellyseer-svc            
  namespace: media
spec:
  selector:
    app: jellyseer       
  ports:
  - name: web
    port: 5055
    protocol: TCP
    targetPort: 5055
  type: ClusterIP
