apps/base/media/jellyseer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer-ingress
  namespace: media
spec:
  rules:
    - host: jellyseer.mkped.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseer-svc
                port:
                  number: 5055
  tls:
  - secretName: jellyseer-certificate-secret
